# challenge-instancer

./: .gitignore  Cargo.toml  config.toml  instancer.service  template_config.toml
.sqlx/: query-28d64cb2682f5ab394cef9cc973ef76a9d0cb1374debb89fbc22cb6d083fe57e.json  query-6f540be5517aaffe1774bebe9a2c0eba835e11cd8e1b07ea44046ae795008704.json  query-da8814d37ee80a916fcd57cd7ec7182b5a54aa532025c2b72d14068cc69762d4.json
deployment-scripts/: deploy-file.sh  deploy-incus.sh
migrations/: 20240607221008_add_user_table.up.sql  20240816032609_add_challenges.down.sql  20240816032609_add_challenges.up.sql  20240822063755_add_user_instance_count.down.sql  20240822063755_add_user_instance_count.up.sql  20240914153903_change_user_nullable_avatar.down.sql  20240914153903_change_user_nullable_avatar.up.sql
src/: config.rs  database.rs  deployment_worker.rs  discord.rs  main.rs  models.rs  router.rs  state.rs  templating.rs
static/css/: dashboard.css  help.css  login.css  main.css  style.css
static/js/: dashboard.js  help.js
templates/: dashboard.html  error.html  help.html  login.html
