[package]
name = "challenge-instancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs"] }
tower-sessions = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
oauth2 = "4.4"
askama = "0.12"
config = "0.14"
serde = { version = "1.0", features = ["derive"] }