[package]
name = "challenge-instancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = { version = "0.7", features = ["macros", "ws"] }
tower-http = { version = "0.5", features = ["fs"] }
tower-sessions = "0.12"
tower-sessions-sqlx-store = { version = "0.13", features=["sqlite"] }
tracing = "0.1"
tracing-subscriber = "0.3"
oauth2 = "4.4"
askama = "0.12"
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
const_format = "0.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
anyhow = "1"
regex = "1.10"
once_cell = "1.19"
governor = "0.6"
async-channel = "2.3"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true